[metadata]

name = pyflowvc
description = Rewrite of the flowVC using a python interface
author = Bray Moll
readme = "README.md"
version = 0.0.1

[options]
packages =
   pyflowvc


install_requires =
   numpy >= 2.1.0
   pandas >= 2.2.0
   meshio >= 5.3.5
python_requires = >=3.10

package_dir =
    =src

zip_safe = no

[options.extras_require]
testing =
    pytest>= 8.0
    pytest-cov>=5.0
    mypy >= 1.0.0
    flake8>=7.0.0
    tox>=4.0.0
    pre-commit>=4.0.0


[options.package_data]
pyflowvc = py.typed

[flake8]
max-line-length = 80
